saving current format- going to change button ids

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 </head>
 <body>
     
+    <div class="board" id="board">
+
+        <span class="row-1" id="row1">
+            <button id="row-1 pos-1" class="pos-button"> </button> | <button id="row-1 pos-2" class="pos-button"> </button> | <button id="row-1 pos-3" class="pos-button"> </button> |
+        </span>
+        <div>- - -</div>
+        <span class="row-2" id="row2">
+            <button id="row-2 pos-1" class="pos-button"> </button> | <button id="row-2 pos-2" class="pos-button"> </button> | <button id="row-2 pos-3" class="pos-button"> </button> |
+        </span>
+        <div>- - -</div>
+        <span class="row-3" id="row3">
+            <button id="row-3 pos-1" class="pos-button"> </button> | <button id="row-3 pos-2" class="pos-button"> </button> | <button id="row-3 pos-3" class="pos-button"> </button> | 
+        </span>
+
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
