Board backend working - next step is the visual

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div class="board" id="board">
 
         <span class="row-1" id="row1">
-            <button id="row-1 pos-1" class="pos-button"> </button> | <button id="row-1 pos-2" class="pos-button"> </button> | <button id="row-1 pos-3" class="pos-button"> </button> |
+            <button id="0" class="pos-button"> </button> | <button id="1" class="pos-button"> </button> | <button id="2" class="pos-button"> </button> |
         </span>
         <div>- - -</div>
         <span class="row-2" id="row2">
-            <button id="row-2 pos-1" class="pos-button"> </button> | <button id="row-2 pos-2" class="pos-button"> </button> | <button id="row-2 pos-3" class="pos-button"> </button> |
+            <button id="3" class="pos-button"> </button> | <button id="4" class="pos-button"> </button> | <button id="5" class="pos-button"> </button> |
         </span>
         <div>- - -</div>
         <span class="row-3" id="row3">
-            <button id="row-3 pos-1" class="pos-button"> </button> | <button id="row-3 pos-2" class="pos-button"> </button> | <button id="row-3 pos-3" class="pos-button"> </button> | 
+            <button id="6" class="pos-button"> </button> | <button id="7" class="pos-button"> </button> | <button id="8" class="pos-button"> </button> | 
         </span>
 
 
