--- a/index.html
+++ b/index.html
@@ -8,23 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="content">
+        
+        <div class="board" id="board">
     
-    <div class="board" id="board">
-
-        <span class="row-1" id="row1">
-            <button id="0" class="pos-button"> </button> | <button id="1" class="pos-button"> </button> | <button id="2" class="pos-button"> </button> |
-        </span>
-        <div>- - -</div>
-        <span class="row-2" id="row2">
-            <button id="3" class="pos-button"> </button> | <button id="4" class="pos-button"> </button> | <button id="5" class="pos-button"> </button> |
-        </span>
-        <div>- - -</div>
-        <span class="row-3" id="row3">
-            <button id="6" class="pos-button"> </button> | <button id="7" class="pos-button"> </button> | <button id="8" class="pos-button"> </button> | 
-        </span>
+            <span class="row" id="row1">
+                <div id="0" class="pos-button"> </div>
+                <div id="1" class="pos-button"> </div>
+                <div id="2" class="pos-button"> </div> 
+            </span>
+            <span class="row" id="row2">
+                <div id="3" class="pos-button"> </div>
+                <div id="4" class="pos-button"> </div>
+                <div id="5" class="pos-button"> </div> 
+            </span>
+            <span class="row" id="row3">
+                <div id="6" class="pos-button"> </div> 
+                <div id="7" class="pos-button"> </div> 
+                <div id="8" class="pos-button"> </div>
+            </span>
+        </div>
 
 
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
