Announcement and half of wincheck logic added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="content">
         
-        <span>
+        <span class="top-section">
             <!-- current placeholder for name input -->
             <label for="player name">Enter your name</label>
             <input type="text" name="player name" id="playerName">
@@ -33,6 +33,10 @@
                 <div id="7" class="pos-button"> </div> 
                 <div id="8" class="pos-button"> </div>
             </span>
+        </div>
+
+        <div class="reset-button">
+            <button id="reset">Reset</button>
         </div>
 
         <div class="announcements">
